<resources>
    <string name="app_name">HearthStoneCards</string>
    <string name="action_settings">Settings</string>
    <string name="collectible">Only Collectible</string>

    <string name="attack">Attack</string>
    <string name="price">Price</string>
    <string name="durability">Durability</string>
    <string name="health">Health</string>
    <string name="search">Search</string>
    <string name="Header">Enter Values</string>
    <string name="title_activity_recycler">RecyclerActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings for the MainActivity -->
    <string name="instructions">
        Press the glass of water after you\'ve hydrated.</string>
    <string name="water_increment_content_desc">Press to record drinking water</string>
    <string name="charging_plug_content_desc">charging plug image</string>

    <string name="default_water_count">0</string>
    <string name="default_charge_notification_count">Hydrate while charging reminder sent 0 times</string>

    <plurals name="charge_notification_count">
        <item quantity="zero">Hydrate while charging reminder sent %d times</item>
        <item quantity="one">Hydrate while charging reminder sent %d time</item>
        <item quantity="other">Hydrate while charging reminder sent %d times</item>
    </plurals>

    <string name="water_chug_toast">GLUG GLUG GLUG</string>

    <string name="charging_reminder_notification_title">Device Charging - Where\'s that water?</string>
    <string name="charging_reminder_notification_body">There\'s never a better time to drink water than when you know your phone is charging. Drink up!</string>
    <string name="main_notification_channel_name">Primary</string>


</resources>
