<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Selection"
    tools:showIn="@layout/activity_selection">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="122dp"
        android:text="@string/Header"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/attackEdit"
        android:layout_width="85dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="110dp"
        android:hint="@string/attack"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AttackText"
        app:layout_constraintTop_toBottomOf="@+id/Welcome"
        android:autofillHints="" />

    <EditText
        android:id="@+id/heathEdit"
        android:layout_width="85dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="110dp"
        android:hint="@string/health"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/healthText"
        app:layout_constraintTop_toBottomOf="@+id/attackEdit" />

    <EditText
        android:id="@+id/durabilityEdit"
        android:layout_width="85dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="110dp"
        android:hint="@string/durability"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/durabilityText"
        app:layout_constraintTop_toBottomOf="@+id/heathEdit"
        android:autofillHints="" />

    <EditText
        android:id="@+id/priceEdit"
        android:layout_width="85dp"
        android:layout_height="42dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="110dp"
        android:hint="@string/price"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/priceText"
        app:layout_constraintTop_toBottomOf="@+id/durabilityEdit"
        android:autofillHints="" />

    <TextView
        android:id="@+id/AttackText"
        android:layout_width="85dp"
        android:layout_height="42dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:text="@string/attack"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="85dp"
        android:layout_height="42dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="9dp"
        android:gravity="center_vertical"
        android:text="@string/price"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durabilityText" />


    <TextView
        android:id="@+id/durabilityText"
        android:layout_width="85dp"
        android:layout_height="42dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="11dp"
        android:gravity="center_vertical"
        android:text="@string/durability"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/healthText" />

    <TextView
        android:id="@+id/healthText"
        android:layout_width="85dp"
        android:layout_height="42dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="13dp"
        android:gravity="center_vertical"
        android:text="@string/health"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AttackText" />

    <Switch
        android:id="@+id/collectibleSwitch"
        android:layout_width="174dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="110dp"
        android:text="@string/collectible"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceEdit" />

    <Button
        android:id="@+id/SearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="148dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collectibleSwitch" />


</android.support.constraint.ConstraintLayout>